# profile.mobile.platform.core.uifw.efl-ext

./: .gitignore  AUTHORS  CMakeLists.txt  efl-extension.manifest
common/src/include/: CMakeLists.txt  efl_extension.h.in  efl_extension_events.h  efl_extension_private.h
common/src/lib/: CMakeLists.txt  eext_events.c  efl_extension.c
data/: CMakeLists.txt  efl-extension.edc
data/groups/: floatingbutton.edc
doc/: Doxyfile.in
indicator_shm/: CMakeLists.txt
indicator_shm/src/: indicator_shm.c
indicator_shm/systemd/: indicator_shm.service
mobile/data/: CMakeLists.txt  HD-inc.edc  efl-extension.edc.in
mobile/data/groups/: floatingbutton.edc
mobile/src/include/: CMakeLists.txt  eext_floatingbutton.h  eext_floatingbutton_common.h  eext_floatingbutton_eo.h  eext_floatingbutton_legacy.h
mobile/src/lib/: CMakeLists.txt  eext_floatingbutton.c  eext_floatingbutton.eo
packaging/: efl-extension.spec
po/: ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_PH.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  lo.po  lt.po  lv.po  mk.po  ml.po  mn_MN.po  (+31 more)
src/include/: CMakeLists.txt  eext_events.h  eext_floatingbutton.h  eext_floatingbutton_common.h  eext_floatingbutton_legacy.h  efl_extension.h  efl_extension.h.in  efl_extension_private.h
src/include/circle/: efl_extension_circle_object.h  efl_extension_circle_object_datetime.h  efl_extension_circle_object_genlist.h  efl_extension_circle_object_progressbar.h  efl_extension_circle_object_slider.h  efl_extension_circle_surface.h
src/include/common/: efl_extension_common.h  efl_extension_common_private.h  efl_extension_more_option_layout.h
src/lib/: CMakeLists.txt  eext_floatingbutton.c  eext_floatingbutton.eo  efl_extension.c  efl_extension_events.c
src/lib/circle/: efl_extension_circle_object_datetime.c  efl_extension_circle_object_genlist.c  efl_extension_circle_object_item.c  efl_extension_circle_object_progressbar.c  efl_extension_circle_object_scroller.c  efl_extension_circle_object_slider.c  efl_extension_circle_surface.c
src/lib/common/: efl_extension_more_option_layout.c
tv/data/: efl-extension.edc.in
tv/src/: CMakeLists.txt
tv/src/include/: CMakeLists.txt
tv/src/lib/: CMakeLists.txt
wearable/data/: CMakeLists.txt  efl-extension.edc.in
wearable/data/groups/: floatingbutton.edc
wearable/src/include/: CMakeLists.txt
wearable/src/include/circle/: efl_extension_circle_object_scroller.h  efl_extension_circle_private.h  efl_extension_rotary.h
wearable/src/include/default/: efl_extension_common_private.h  efl_extension_index_layout.h  efl_extension_more_option_layout.h
wearable/src/lib/: CMakeLists.txt
wearable/src/lib/circle/: efl_extension_circle_object.c  efl_extension_circle_object_datetime.c  efl_extension_circle_surface.c  efl_extension_rotary.c
wearable/src/lib/default/: efl_extension_index_layout.c  efl_extension_more_option_layout.c
