CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(efl-extension C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_DIR ${PREFIX})
SET(BINDIR ${PREFIX}/bin)
SET(LIBDIR ${PREFIX}/lib)
SET(EDJDIR ${PREFIX}/share/${PROJECT_NAME}/themes)
SET(INCDIR ${PREFIX}/include)
SET(IMGDIR ${PREFIX}/share/${PROJECT_NAME}/images)
SET(VERSION_MAJOR 0)
SET(VERSION ${VERSION_MAJOR}.1.0)
SET(VENDOR "samsung")
SET(PACKAGE ${PROJECT_NAME})

SET(CMAKE_SKIP_BUILD_RPATH TRUE)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

IF(NOT DBDIR)
	SET(DBDIR "$ENV{HOME}")
ENDIF(NOT DBDIR)
ADD_DEFINITIONS("-DDBDIR=\"${DBDIR}\"")
ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DVERSION=\"${VERSION}\"")
ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")
ADD_DEFINITIONS("-DPLUGINDIR=\"${PLUGINDIR}\"")
ADD_DEFINITIONS("-DEFL_EXTENSION_EDJ=\"${EDJDIR}/${PROJECT_NAME}.edj\"")
ADD_DEFINITIONS("-DIMG_DIR=\"${IMGDIR}\"")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden -Wall")

INCLUDE(FindPkgConfig)
SET(COMMON_HEADERS)
SET(COMMON_DIR ../../../common/src)
SET(LIB_SRCS)
SET(LIB_NAME ${PROJECT_NAME})

INCLUDE_DIRECTORIES(common/src/include)
ADD_SUBDIRECTORY(common)
IF("${TIZEN_PROFILE_NAME}" STREQUAL "wearable")
	INCLUDE_DIRECTORIES(wearable/src/include)
	ADD_SUBDIRECTORY(wearable)
ELSE()
	IF("${TIZEN_PROFILE_NAME}" STREQUAL "tv")
		INCLUDE_DIRECTORIES(tv/src/include)
		ADD_SUBDIRECTORY(tv)
	ELSE()
		INCLUDE_DIRECTORIES(mobile/src/include)
		ADD_SUBDIRECTORY(mobile)
	ENDIF()
ENDIF()

#ADD_SUBDIRECTORY(doc)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -fPIC -Wall -Werror")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -Wl,--rpath=/usr/lib")

CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION lib/pkgconfig)

IF(${TIZEN_PROFILE_NAME} STREQUAL "wearable")
    INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/wearable/data/images/ DESTINATION ${IMGDIR} FILES_MATCHING PATTERN "*.png")
ENDIF()

# i18n
ADD_SUBDIRECTORY(po)

# indicator_shm
ADD_SUBDIRECTORY(indicator_shm)
